Raise code coverage for critical and needs improvement files
- Created ShoppingControllerTest.java (10.2% -> 100%)
- Enhanced ShoppingListServiceTest.java (3.1% -> 93.34%)
- Created PresenceStateServiceTest.java (60% -> 100%)
- Enhanced WebSocketEventListenerTest.java (41.7% -> 100%)
- Enhanced PresenceControllerTest.java (56.5% -> 100%)
- Enhanced GlobalExceptionHandlerTest.java (60% -> 99.14%)
- Enhanced AiProcessingExceptionTest.java (66.7% -> 100%)
- Enhanced AiMessageTest.java (20.8% -> 100%)
- Enhanced GeminiAiClientTest.java (68.6% -> 92.41%)
- Fixed bug in ShoppingListService.mapToDTO(): moved setOwnerId() inside null check