@@ -10,14 +10,19 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
+import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
@@ -53,7 +58,8 @@ class GeminiAiClientTest {
         when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
                 .thenReturn(ResponseEntity.ok(responseJson));
 
-        AiMessage response = client.generateResponse(List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Hi")))), null);
+        List<AiMessage> messages = List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Hi"))));
+        AiMessage response = client.generateResponse(messages, null);
 
         assertThat(response.role()).isEqualTo("model");
         assertThat(response.parts()).hasSize(1);
@@ -76,7 +82,8 @@ class GeminiAiClientTest {
                 .thenReturn(ResponseEntity.ok(responseJson));
 
         AiTool tool = new AiTool("search_catalog", "Search catalog", Map.of("type", "OBJECT"), (args, ctx) -> "result");
-        AiMessage response = client.generateResponse(List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Find milk")))), List.of(tool));
+        List<AiMessage> messages = List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Find milk"))));
+        AiMessage response = client.generateResponse(messages, List.of(tool));
 
         assertThat(response.parts()).hasSize(1);
         AiMessage.ToolCallPart toolCall = (AiMessage.ToolCallPart) response.parts().get(0);
@@ -93,8 +100,8 @@ class GeminiAiClientTest {
         when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
                 .thenReturn(ResponseEntity.ok(responseJson));
 
-        AiMessage response = client.generateResponse(
-                List.of(new AiMessage("user", List.of(new AiMessage.ImagePart(imageData, "image/jpeg")))), null);
+        List<AiMessage> messages = List.of(new AiMessage("user", List.of(new AiMessage.ImagePart(imageData, "image/jpeg"))));
+        AiMessage response = client.generateResponse(messages, null);
 
         assertThat(((AiMessage.TextPart) response.parts().get(0)).text()).isEqualTo("Image processed");
     }
@@ -104,7 +111,7 @@ class GeminiAiClientTest {
         when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
                 .thenThrow(new RuntimeException("API error"));
 
-        List<AiMessage> messages = List.of();
+        List<AiMessage> messages = Collections.emptyList();
         assertThatThrownBy(() -> client.generateResponse(messages, null))
                 .isInstanceOf(AiProcessingException.class)
                 .hasMessageContaining("Gemini API error");
@@ -118,8 +125,8 @@ class GeminiAiClientTest {
         when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
                 .thenReturn(ResponseEntity.ok(responseJson));
 
-        AiMessage response = client.generateResponse(
-                List.of(new AiMessage("tool", List.of(new AiMessage.ToolResponsePart("search", "result")))), null);
+        List<AiMessage> messages = List.of(new AiMessage("tool", List.of(new AiMessage.ToolResponsePart("search", "result"))));
+        AiMessage response = client.generateResponse(messages, null);
 
         assertThat(((AiMessage.TextPart) response.parts().get(0)).text()).isEqualTo("Done");
     }
@@ -132,7 +139,8 @@ class GeminiAiClientTest {
         when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
                 .thenReturn(ResponseEntity.ok(responseJson));
 
-        AiMessage response = client.generateResponse(List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Hi")))), null);
+        List<AiMessage> messages = List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Hi"))));
+        AiMessage response = client.generateResponse(messages, null);
 
         assertThat(response.parts()).isEmpty();
     }
@@ -145,8 +153,151 @@ class GeminiAiClientTest {
         when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
                 .thenReturn(ResponseEntity.ok(responseJson));
 
-        client.generateResponse(List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Return JSON")))), List.of());
+        List<AiMessage> messages = List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Return JSON"))));
+        client.generateResponse(messages, Collections.emptyList());
 
         verify(restTemplate).postForEntity(any(String.class), any(HttpEntity.class), eq(String.class));
+    }
+
+    @Test
+    void generateResponse_tooManyRequestsWithRetryDelay() {
+        HttpClientErrorException exception = HttpClientErrorException.create(
+                HttpStatus.TOO_MANY_REQUESTS,
+                "Too Many Requests",
+                null,
+                "{\"error\":{\"details\":[{\"retryDelay\":\"60s\"}]}}".getBytes(),
+                StandardCharsets.UTF_8
+        );
+        when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
+                .thenThrow(exception);
+
+        List<AiMessage> messages = Collections.emptyList();
+        assertThatThrownBy(() -> client.generateResponse(messages, null))
+                .isInstanceOf(AiProcessingException.class)
+                .satisfies(ex -> {
+                    AiProcessingException ape = (AiProcessingException) ex;
+                    assertThat(ape.getStatus()).isEqualTo(HttpStatus.TOO_MANY_REQUESTS);
+                    assertThat(ape.getRetryAfterSeconds()).isEqualTo(60L);
+                });
+    }
+
+    @Test
+    void generateResponse_tooManyRequestsWithoutRetryDelay() {
+        HttpClientErrorException exception = HttpClientErrorException.create(
+                HttpStatus.TOO_MANY_REQUESTS,
+                "Too Many Requests",
+                null,
+                "{}".getBytes(),
+                StandardCharsets.UTF_8
+        );
+        when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
+                .thenThrow(exception);
+
+        List<AiMessage> messages = Collections.emptyList();
+        assertThatThrownBy(() -> client.generateResponse(messages, null))
+                .isInstanceOf(AiProcessingException.class)
+                .satisfies(ex -> {
+                    AiProcessingException ape = (AiProcessingException) ex;
+                    assertThat(ape.getStatus()).isEqualTo(HttpStatus.TOO_MANY_REQUESTS);
+                    assertThat(ape.getRetryAfterSeconds()).isNull();
+                });
+    }
+
+    @Test
+    void generateResponse_httpClientError() {
+        HttpClientErrorException exception = HttpClientErrorException.create(
+                HttpStatus.BAD_REQUEST,
+                "Bad Request",
+                null,
+                "Bad Request".getBytes(),
+                StandardCharsets.UTF_8
+        );
+        when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
+                .thenThrow(exception);
+
+        List<AiMessage> messages = Collections.emptyList();
+        assertThatThrownBy(() -> client.generateResponse(messages, null))
+                .isInstanceOf(AiProcessingException.class)
+                .satisfies(ex -> {
+                    AiProcessingException ape = (AiProcessingException) ex;
+                    assertThat(ape.getStatus()).isEqualTo(HttpStatus.BAD_REQUEST);
+                });
+    }
+
+    @Test
+    void generateResponse_parseGeminiResponseWithFunctionCall() throws Exception {
+        String responseJson = """
+                {
+                  "candidates": [{
+                    "content": {
+                      "role": "model",
+                      "parts": [{"functionCall": {"name": "search", "args": {"query": "test"}}}]
+                    }
+                  }]
+                }
+                """;
+        when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
+                .thenReturn(ResponseEntity.ok(responseJson));
+
+        List<AiMessage> messages = List.of(new AiMessage("user", List.of(new AiMessage.TextPart("Search"))));
+        AiMessage response = client.generateResponse(messages, null);
+
+        assertThat(response.parts()).hasSize(1);
+        assertThat(response.parts().get(0)).isInstanceOf(AiMessage.ToolCallPart.class);
+        AiMessage.ToolCallPart toolCall = (AiMessage.ToolCallPart) response.parts().get(0);
+        assertThat(toolCall.name()).isEqualTo("search");
+        assertThat(toolCall.arguments()).isEqualTo(Map.of("query", "test"));
+    }
+
+    @Test
+    void extractRetryAfterSeconds_shouldReturnDelay() throws Exception {
+        java.lang.reflect.Method method = GeminiAiClient.class.getDeclaredMethod("extractRetryAfterSeconds", String.class);
+        method.setAccessible(true);
+
+        String responseBody = "{\"error\":{\"details\":[{\"retryDelay\":\"30s\"}]}}";
+        long result = (long) method.invoke(client, responseBody);
+        assertThat(result).isEqualTo(30L);
+    }
+
+    @Test
+    void extractRetryAfterSeconds_shouldReturnNegativeOneWhenNull() throws Exception {
+        java.lang.reflect.Method method = GeminiAiClient.class.getDeclaredMethod("extractRetryAfterSeconds", String.class);
+        method.setAccessible(true);
+
+        long result = (long) method.invoke(client, (String) null);
+        assertThat(result).isEqualTo(-1L);
+    }
+
+    @Test
+    void extractRetryAfterSeconds_shouldReturnNegativeOneWhenBlank() throws Exception {
+        java.lang.reflect.Method method = GeminiAiClient.class.getDeclaredMethod("extractRetryAfterSeconds", String.class);
+        method.setAccessible(true);
+
+        long result = (long) method.invoke(client, "");
+        assertThat(result).isEqualTo(-1L);
+    }
+
+    @Test
+    void extractRetryAfterSeconds_shouldReturnNegativeOneWhenNoMatch() throws Exception {
+        java.lang.reflect.Method method = GeminiAiClient.class.getDeclaredMethod("extractRetryAfterSeconds", String.class);
+        method.setAccessible(true);
+
+        long result = (long) method.invoke(client, "no retry delay here");
+        assertThat(result).isEqualTo(-1L);
+    }
+
+    @Test
+    void mapToGeminiContent_withToolResponsePart() throws Exception {
+        String responseJson = """
+                {"candidates":[{"content":{"role":"model","parts":[{"text":"Done"}]}}]}
+                """;
+        when(restTemplate.postForEntity(any(String.class), any(HttpEntity.class), eq(String.class)))
+                .thenReturn(ResponseEntity.ok(responseJson));
+
+        List<AiMessage> messages = List.of(new AiMessage("tool", List.of(new AiMessage.ToolResponsePart("search", "result"))));
+
+        AiMessage response = client.generateResponse(messages, null);
+        assertThat(response.parts()).hasSize(1);
+        assertThat(((AiMessage.TextPart) response.parts().get(0)).text()).isEqualTo("Done");
     }
 }
